			   XPCE ChangeLog
			   ==============

* ADDED: `image<-rotate' now accepts a real rather then an integer.

* COMPAT: re-added `finder->directory' (Bob Wielinga).

* FIXED: Completion (TAB) in file_item (library(pce_file_item)).

* FIXED: `graphical->draw_image': correctly handle non-square images.

* MODIFIED: PceEmacs command "M-x insert_date" to insert just the date, not
  the time.


VERSION 6.0.6, distributed with SWI-Prolog 5.0.6
================================================

* FIXED: PceEmacs prolog mode trapping an error when pausing during
  singleton-replace mode (error became severe after fixing timer :-).

* FIXED: real_range type handling of unbound (e.g. "1.0..").

* FIXED: X11 version: timers sometimes stopped spontaneously.

* ENHANCED: library(find_file).  New and more flexible file-browser.

* FIXED: interface to generate error(instantiation_error,_) exception on
  uninstantiated data rather than a type-error.

* ENHANCED: XPCE Inspector to show textual value of a string rather then
  the address of the text and numerical indication of flags.

* ADDED: `dialog<-border' to always return a size object.

* ADDED: `file_item <->exists', fixing browse mode in PceEmacs save_as and
  friends.

* FIXED: Explicit window placement in Windows version. 

* FIXED: avoid loosing a file-descriptor in prolog_xref.pl if a loaded
  file contains a syntax-error in the first term.  Affects PceEmacs in
  Prolog mode and the GUI-Tracer.

* FIXED: Added -fno-strict-aliasing to make XPCE compile correctly using
  GCC-3 (Lourens van der Meij).

* FIXED: `image_browser<-selected' from library(pce_image_browser).

* ADDED: Allow unbound value as default in default/3.

* ADDED: `path<-distance' to compute distance to a point or event.

* ADDED: `menu->insert_before' for easily adding menu items in the middle
  of existing menus.

* FIXED: `object <-get_hyper' got into a loop when accessing the hyper
  backwards.
